development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-package-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: test-package
    spec:
      containers:
        - name: test-package-app
          image: owl8105/test-package-k8s:1.7.0
          ports:
            - name: app-port
              containerPort: 8080
  selector:
    matchLabels:
      app: test-package
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-app
          image: mysql:5.7
          ports:
            - name: mysql-port
              containerPort: 3306
  selector:
    matchLabels:
      app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
        - name: bar-app
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=bar"
  selector:
    matchLabels:
      app: bar
