service.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-package-service
spec:
  selector:
    app: test-package
  ports:
    - port: 8000
      targetPort: 8080
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
    # Default port used by the image
    - port: 5678
